@@ -2316,12 +2316,12 @@ viaInitAccel(ScreenPtr pScreen)
 	pVia->FBFreeEnd -= VIA_VQ_SIZE;
     }
 
-    viaInitialize2DEngine(pScrn);
-
     if (pVia->hwcursor) {
 	pVia->FBFreeEnd -= VIA_CURSOR_SIZE;
 	pVia->CursorStart = pVia->FBFreeEnd;
     }
+
+    viaInitialize2DEngine(pScrn);
 
     /*
      * Sync marker space.
