@@ -1,3 +1,11 @@
+2006-12-04  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>
+	
+	* unichrome/via_driver.c:
+ 	
+        Added patch submitted by Gabriel Mansi 
+	<gabriel-dot-mansi-at-gmail-dot-com> to fix the K8M890 hang on 
+	VT switch.
+
 2006-11-30  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>
 	
 	* unichrome/via_mode.c:
